2003-08-10  Jon Schewe  <jpschewe@mtu.net>

	* docs/README.developer (MISC): Removed the application variable
	currentTournament, just use Queries.getCurrentTournament() all of
	the time now.

	* web/admin/index.jsp: Make sure we don't grab the current
	tournament until after it's actually been changed, otherwise the
	combobox reports the previous tournament after changes.

	* src/fll/web/GetFile.java (getFile): Ensure that
	judges are assigned before downloading subjective datafile (707847).

	* src/fll/Queries.java (isJudgesProperlyAssigned): Ensure that
	judges are assigned before downloading subjective datafile (707847).

2003-08-09  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/model/SubjectiveTableModel.java (sort): Use
	fireTableDataChanged to signify that a sort has occurred instead
	of fireTableStructureChanged.  This keeps the table columns from
	getting recreated and loosing the editor. (707840)  

2003-07-27  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/GetFile.java (getFile): Make score.xml human
	readable (707855).

2003-07-25  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/gui/SubjectiveFrame.java (SubjectiveFrame): Gave each
	category it's own table and put them in a tabbed pane.  This makes
	sure that a table doesn't loose it's size and sort settings when
	switching categories. (707885)

2003-07-21  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/playoff/Playoff.java (insertBye): 
	Always use the tournament from the database. (707887)

	* src/fll/ScoreStandardization.java (setSubjectiveScoreGroups):
	Always use the tournament from the database. (707887)

2003-07-20  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (getNextRunNumber): Always use the
	tournament from the database. (707887)

	* web/scoreEntry/scoreEntry.jsp: Always use the tournament from
	the database. (707887)

	* web/admin/index.jsp: Added link to add tournaments for each
	region in the teams table. (766898)

	* src/fll/Queries.java (insertTournamentsForRegions): Added